tests/paczka1/fuzzy1/96996729.err
Error in line 2: 77r A918 21,2
Error in line 4: eLV1cHxtUZ A326 94,9
Error in line 10: nxgMcn1 A326 31,4
Error in line 7: 77r A410 25,9
Error in line 33: cM9BpYhUO A64 53,0
